# conda-env-inspect

./: CODE_OF_CONDUCT.md  CONDA_INTEGRATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  README.md  dependency_graph.dot  deps.dot  minimal_deps.dot
.github/workflows/: ci.yml
examples/: basic_environment.yml  complex_environment.yml  conflict_environment.yml  data_science_graph.dot  environment.yml  invalid_environment.yml  large_environment.yml  minimal.yml
src/: advanced_analysis.rs  analysis.rs  cli.rs  conda_api.rs  exporters.rs  interactive.rs  lib.rs  main.rs  models.rs  parsers.rs  performance.rs  utils.rs  vulnerability_db.rs
tests/: README.md  advanced_analysis_test.rs  analysis_test.rs  cli_integration_test.rs  interactive_test.rs  models_test.rs  parsers_test.rs  performance_test.rs
